# basic-raytracer

./: .gitignore  BVH.h  CMakeLists.txt  Camera.h  Geometry.h  Makefile  Mat.h  README.md  SDLauxiliary.h  TestModel.h  Vec.h  test.cpp
apps/: CMakeLists.txt
apps/TestApp/: CMakeLists.txt  main.cpp  test.cpp
libraries/: CMakeLists.txt
libraries/BVH/: BVH.cpp  BVH.h  CMakeLists.txt
libraries/Camera/: CMakeLists.txt  Camera.cpp  Camera.h  GlmTypes.h
libraries/Geometry/: CMakeLists.txt  Geometry.cpp  Geometry.h  GeometryUtils.cpp  GeometryUtils.h  Material.cpp  Material.h  Scenes..cpp  Scenes..h  Scenes.cpp  Scenes.h  TestModel.cpp  TestModel.h
libraries/SDL/: CMakeLists.txt  SDLWrapper.cpp  SDLWrapper.h  SDLauxiliary.cpp  SDLauxiliary.h
libraries/STD/: CMakeLists.txt  Latch.cpp  Latch.h  ThreadPool.cpp  ThreadPool.h
